<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('pembayarans', function (Blueprint $table) {
            $table->id();
            $table->foreignId('penyewaans_id')->constrained('penyewaans');
            $table->date('periode');
            $table->decimal('jumlah', 10, 2);
            $table->date('tanggal_bayar')->nullable();
            $table->string('bukti_pembayaran')->nullable();
            $table->enum('status', ['menunggu','lunas'])->default('menunggu');
            $table->string('metode')->nullable();
            $table->text('keterangan')->nullable();
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('pembayarans');
    }
};
